<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >

        <Button
            android:id="@+id/bt"
            android:onClick="addcontact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_contacts" />

        <TextView
            android:id="@+id/tv_input_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/please_input_number"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            >
        </EditText>

        <TextView
            android:id="@+id/tv_input_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_input_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:lines="5" />

        <Button
            android:id="@+id/bt_send"
            android:onClick="send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendmessage" />
   </LinearLayout>

</RelativeLayout>
